# aoc-2020

./: Cargo.toml
day-1/: Cargo.toml
day-1/src/: main.rs
day-2/: Cargo.toml
day-2/src/: main.rs
day-3/: Cargo.toml
day-3/src/: main.rs
day-4/: Cargo.toml
day-4/src/: main.rs
day-5/: Cargo.toml
day-5/src/: main.rs
day-6/: Cargo.toml
day-6/src/: main.rs
util/: Cargo.toml
util/src/: lib.rs
