[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Pete Wildsmith <pwildsmith@ebay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]

[workspace]
members = [
    "day-1",
    "day-2",
    "util",
]
